app/sass/core.scss
@import "normalize";
@import 'form';
@import 'animations-home';
@import 'logo-trunks';
@import 'shapes-background';
@import 'logo-img';
@import 'about-me';

$base-width: 100%;
$base-height: 100%;
$base-padding: 5%;
$base-margin: 30% 0;
$shadow-color: transparentize(black, 0.5);
$href-color: green;
$button-color: rgb(186,218,85);
$corner-top-left-color: rgb(58,190,255);
$header-color: rgb(128,123,135);
// $base-font-google: 'Bad Script', 'cursive';
// $base-font-google2: 'La BelleAurore', 'cursive';
$base-font-google3: 'Quicksand', 'sans-serif';
$base-font-google4: 'Alegreya Sans', 'sans-serif';
$base-font-size: 1.2em;
$block-width: 9em;
$block-height: 25%;
$break-small: 545px;
html {
  width: 100%;
}

body {
  background-attachment: fixed;
  font-family: $base-font-google3;
  font-size: $base-font-size;

}

header {
  position: fixed;
  display: inline-block;
  width: 100%;
  color: $header-color;
}

header h2 {
  display: inline-block;
  margin: 0;
  width: 100%;
  text-align: center;
  font-family: $base-font-google4;
  font-size: xx-large;
  background-color: rgba(51, 124, 160, 1);
  color: white;
}

header span,  {
  display: inline-block;
  padding: 0 5%;
}

.icon-sec {
  text-align: center;
  background-color: white;
}

.icon-sec span {
  padding: 1% 10%;
}

nav {
  width: 100%;
}

nav ul {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
  padding: 0;
  margin-top: 15%;
}

nav ul li {
  position: relative;
  display: inline-block;
  list-style: none;
  width: 15em;
  height: 15em;
  margin: 2.5%;
}

nav ul li a {
  position: absolute;
  // right: 25%;
  // bottom: 50%;
  top: 0;
  left: 0;
  font-size: 2em;
}

a:link {
  color: $header-color;
  text-decoration: none;
}

a:visited {
  color: $header-color;
  text-decoration: underline;
}

a:hover {
  color: $button-color;
  text-decoration: none;
}


#nav-plant2, #nav-flower {
  height: 6em;
}

#nav-plant2, #nav-plant {
  text-align: center;
}

#nav-carrot, #nav-flower {
  text-align: center;
}

#animations-nav {
  right: 30%;
}

#blog-nav {
  right: 40%;
}

 body main {
  display: inline-block;
  margin-top: 5%;
  width: 100%;
  z-index: -100;
}

.sec-container {
  display: inline-block;
  width: 100%;
}

#repeater-sec {
  background-color: rgba(255,255,255,0.6);
  margin: 0 10%;
}

#repeater:nth-child(even) {
  width: 80%;
  padding: 0 10%;
  // background: $repeater-even-color;
}

#repeater:nth-child(odd) {
  width: 80%;
  padding: 0 10%;
}

#github-avatar {
  width: 30%;
}

#github-profile {
  padding: 0 10%;
  margin: 10% 0%;
}


span a {
  overflow-wrap: break-word;
}

footer {
  width: 100%;
  // background-color: $footer-color;
  font-family: $base-font-google3;
}

footer ul {
  width: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

footer ul li {
  display: inline-block;
  list-style: none;
  padding: 10% 10%;
}

@media screen and (max-width: $break-small) {
  nav ul {
    width: 100%;
    padding: 0;
  }
}

